crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__anchors_after_alternation_quantified_branch_stays_conservative.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (array [(identifier)? @x ";"] . (identifier) @y)
---
[strings]
S0 "Beauty will save the world"
S1 "x"
S2 "y"
S3 "Test"
S4 "array"
S5 "identifier"
S6 ";"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { x, y }
T2 = Optional(T0)  ; <Node>?

[type_members]
M0: S1 → T2  ; x: T2
M1: S2 → T0  ; y: <Node>

[type_names]
N0: S3 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06   !   (array)                          08
  07  ...  
  08  └‣─  _                                20, 14, 22, 24
  10  ─◦─  (identifier) [Node Set(M1)]      12
  12  ─‣┘  _                                13
  13                                        ▶
  14  -ε-  [Null Set(M0)]                   10
  16   !   (identifier) [Node Set(M0)]      10
  18  ─‣─  _                                16, 18
  20   !   _                                16, 18
  22   !   [Null Set(M0)] ";"               10
  24  ─‣─  _                                20, 14, 22, 24
