crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__anchors_after_captured_alternation_stays_conservative.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = {[A: (number) B: "+"] @t . (identifier)}
---
[strings]
S0 "Beauty will save the world"
S1 "A"
S2 "B"
S3 "t"
S4 "Test"
S5 "number"
S6 "+"
S7 "identifier"

[type_defs]
T0 = <Void>
T1 = Enum    M0:2  ; A | B
T2 = Struct  M2:1  ; { t }

[type_members]
M0: S1 → T0  ; A: <Void>
M1: S2 → T0  ; B: <Void>
M2: S3 → T1  ; t: T1

[type_names]
N0: S4 → T2  ; Test

[entrypoints]
Test = 06 :: T2

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06  -ε-                                   11, 13
  08                                        ▶
  09  ─◦─  [Set(M2)] (identifier)           08
  11   !   [Enum(M0)] (number) [EndEnum]    09
  13   !   [Enum(M1)] "+" [EndEnum]         09
