crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__anchors_after_inline_captured_alternation_splits.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = {[(number) "+"] @t . (identifier)}
---
[strings]
S0 "Beauty will save the world"
S1 "t"
S2 "Test"
S3 "number"
S4 "+"
S5 "identifier"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { t }

[type_members]
M0: S1 → T0  ; t: <Node>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06  -ε-                                   11, 13
  08                                        ▶
  09  ─◦─  (identifier)                     08
  10  ─•─  (identifier)                     08
  11   !   (number) [Node Set(M0)]          10
  13   !   "+" [Node Set(M0)]               09
