crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__anchors_explicit_comment_pattern_emits_match_before_skip_nav.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (program {(comment) @c . (function_declaration) @f})
---
[strings]
S0 "Beauty will save the world"
S1 "c"
S2 "f"
S3 "Test"
S4 "program"
S5 "comment"
S6 "function_declaration"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { c, f }
T2 = Struct  M2:1  ; { c }
T3 = Struct  M3:1  ; { f }

[type_members]
M0: S1 → T0  ; c: <Node>
M1: S2 → T0  ; f: <Node>
M2: S1 → T0  ; c: <Node>
M3: S2 → T0  ; f: <Node>

[type_names]
N0: S3 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   !   (program)                        08
  07  ...  
  08   ▽   (comment) [Node Set(M0)]         10
  10  !▷   (function_declaration) [Node Set(M1)]  12
  12   △   _                                13
  13                                        ▶
