crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__anchors_first_child_with_alternation.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (program (expression_statement (call_expression arguments: (arguments . [(identifier) @arg]))))
---
[strings]
S0 "Beauty will save the world"
S1 "arg"
S2 "Test"
S3 "program"
S4 "expression_statement"
S5 "call_expression"
S6 "arguments"
S7 "identifier"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { arg }

[type_members]
M0: S1 → T0  ; arg: <Node>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06   !   (program)                        07
  07  └‣─  (expression_statement)           08
  08  └‣─  (call_expression)                09
  09  └‣─  arguments: (arguments)           10
  10  └•─  (identifier) [Node Set(M0)]      12
  12  ─‣┘⁴ _                                13
  13                                        ▶
