crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__anchors_first_child_with_anonymous.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (array . "+")
---
[strings]
S0 "Beauty will save the world"
S1 "Test"
S2 "array"
S3 "+"

[type_defs]
T0 = <Void>

[type_members]

[type_names]
N0: S1 → T0  ; Test

[entrypoints]
Test = 6 :: T0

[transitions]
_ObjWrap:
  0   ε   [Obj]                             2
  2       Trampoline                        3
  3   ε   [EndObj]                          5
  5                                         ▶

Test:
  6   !   (array)                           7
  7  e▽   "+"                               8
  8   △   _                                 9
  9                                         ▶
